:tada: My first game! Tic Tac Toe

--- a/functions_and_methods_homework/08-Functions and Methods Homework.ipynb
+++ b/functions_and_methods_homework/08-Functions and Methods Homework.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 174,
    "metadata": {
     "collapsed": true
    },
@@ -187,15 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String: Hello Mr. Rogers, how are you this fine Tuesday OOO?\n",
-      "No. of Upper case characters : 7\n",
+      "Original String: Hello Mr. Rogers, how are you this fine Tuesday?\n",
+      "No. of Upper case characters : 4\n",
       "No. of Lower case characters : 33\n"
      ]
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 176,
    "metadata": {
     "collapsed": true
    },
@@ -363,8 +363,7 @@
     "    s = s.replace(' ','')\n",
     "    for letters in range(len(s)):\n",
     "        normal_string.append(s[letters])\n",
-    "    reversed_string = normal_string[::-1]\n",
-    "    if normal_string == reversed_string:\n",
+    "    if normal_string == normal_string[::-1]:\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -373,16 +372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
