--- a/test2_function_test_exercises/03-Function Practice Exercises.ipynb
+++ b/test2_function_test_exercises/03-Function Practice Exercises.ipynb
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 321,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    mylist = text.split()\n",
+    "    mylist = text.lower().split()\n",
     "    if mylist[0][0] == mylist[1][0]:\n",
     "        return True\n",
     "    else:\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 322,
    "metadata": {
     "collapsed": true
    },
@@ -145,14 +145,14 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check\n",
-    "animal_crackers('Levelheaded Llama')"
+    "animal_crackers('Levelheaded llama')"
    ]
   },
   {
@@ -537,23 +537,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    "
+    "    control = 0\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] == 3:\n",
+    "            control += 1\n",
+    "            if control == 2:\n",
+    "                return True\n",
+    "        elif nums[i] != 3:\n",
+    "            control = 0\n",
+    "    if control < 2:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 3])"
@@ -561,11 +581,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 1, 3])"
@@ -573,11 +604,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([3, 1, 3])"
@@ -594,23 +636,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def paper_doll(text):\n",
-    "    pass"
+    "    mystring = ''\n",
+    "    for i in range(len(text)):\n",
+    "        mystring += 3*text[i]\n",
+    "    return mystring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HHHeeellllllooo'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Hello')"
@@ -618,11 +674,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MMMiiissssssiiissssssiiippppppiii'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Mississippi')"
@@ -640,23 +707,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
-    "    pass"
+    "    eleven_checker = 0\n",
+    "    if a == 11 or b == 11 or c == 11:\n",
+    "        eleven_checker = 1\n",
+    "    if a+b+c <= 21:\n",
+    "        return a+b+c\n",
+    "    elif (a+b+c > 21) and (eleven_checker == 1) and (a+b+c-10 <= 21):\n",
+    "        return a+b+c-10\n",
+    "    else:\n",
+    "        return 'BUST'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(5,6,7)"
@@ -664,11 +750,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BUST'"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,9)"
@@ -676,11 +773,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,11)"
@@ -699,35 +807,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 327,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    pass"
+    "    total_sum = 0\n",
+    "    control = 0\n",
+    "    for num in arr:\n",
+    "        if num == 6:\n",
+    "            control += 1\n",
+    "        if control == 0:\n",
+    "            total_sum += num\n",
+    "        elif control > 0:\n",
+    "            pass\n",
+    "        if num == 9:\n",
+    "            control = 0\n",
+    "    return total_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
-    "summer_69([1, 3, 5])"
+    "summer_69([6, 9, 5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 329,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 329,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([4, 5, 6, 7, 8, 9])"
@@ -735,11 +876,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 330,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([2, 1, 6, 9, 11])"
@@ -765,23 +917,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
-    "    pass"
+    "    mylist = []\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] == 0 or nums[i] == 7:\n",
+    "            mylist.append(nums[i])\n",
+    "    if mylist == [0,0,7]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -789,11 +959,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -801,11 +982,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -823,27 +1015,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 336,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
-    "                "
+    "\n",
+    "    mylist = []\n",
+    "    control_list = []\n",
+    "    bool_count = 0\n",
+    "    prime_numbers = 0\n",
+    "\n",
+    "    for i in range(2,num+1):\n",
+    "        mylist.append(i)\n",
+    "    for i in range(len(mylist)):\n",
+    "        for j in range(len(mylist)):\n",
+    "            control_list.append(mylist[i]%(j+2)==0)\n",
+    "        for boolean in control_list:\n",
+    "            if boolean == True:\n",
+    "                bool_count += 1\n",
+    "        if bool_count==1:\n",
+    "            prime_numbers += 1\n",
+    "        control_list = []\n",
+    "        bool_count = 0\n",
+    "    return prime_numbers                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 339,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(3, 5, 2)"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(3, 1 ,2)"
    ]
   },
   {
@@ -864,25 +1104,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 319,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def print_big(letter):\n",
-    "    pass"
+    "    from itertools import permutations\n",
+    "    letter = letter.capitalize()\n",
+    "    possible_comb50 = permutations(['*','*','*','*','*'],5)\n",
+    "    possible_comb41 = permutations(['*','*','*','*',' '],5)\n",
+    "    possible_comb32 = permutations(['*','*','*',' ',' '],5)\n",
+    "    possible_comb23 = permutations(['*','*',' ',' ',' '],5)\n",
+    "    possible_comb14 = permutations(['*',' ',' ',' ',' '],5)\n",
+    "    possible_comb05 = permutations([' ',' ',' ',' ',' '],5) \n",
+    "  \n",
+    "    my_dict = {'A':'  *  \\n * * \\n*****\\n*   *\\n*   *','B':'**** \\n*   *\\n*****\\n*   *\\n**** ','C': '*****\\n*    \\n*    \\n*    \\n*****','D':'***  \\n*  * \\n*   *\\n*  * \\n***  ','E':'*****\\n*    \\n*****\\n*    \\n*****'}\n",
+    "    return (my_dict[letter])\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 320,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "*    \n",
+      "*****\n",
+      "*    \n",
+      "*****\n"
+     ]
+    }
+   ],
    "source": [
-    "print_big('a')"
+    "letra = print_big('e')\n",
+    "print(letra)"
    ]
   },
   {
